Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/boxing/Boxing2.out
Boxing2.java:12:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, java.lang.Long)
1 error
